# habit-tracker

./: .env.example  .flake8  .gitignore  README.md  pyproject.toml
config/: celery.py  settings.py  urls.py
habits/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
habits/migrations/: 0001_initial.py
habits/tests/: test_models.py
telegram_bot/: bot.py  services.py  tasks.py
telegram_bot/tests/: test_tasks.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_models.py
