[tool.poetry]
name = "habit-tracker"
version = "0.1.0"
description = ""
authors = ["a12345 <shu.m2010@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.4"
djangorestframework = "^3.16.0"
python-dotenv = "^1.1.1"
drf-yasg = "^1.21.10"
celery = "^5.5.3"
redis = "^6.2.0"
djangorestframework-simplejwt = "^5.5.0"
requests = "^2.32.4"
python-decouple = "^3.8"
drf-spectacular = "^0.28.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
isort = "^6.0.1"
mypy = "^1.17.0"
black = "^25.1.0"
pytest = "^8.4.1"
pytest-django = "^4.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119

